# asquarerock-hackathon

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
a2rock/: __init__.py  ap-1-per-lineage-models.ipynb  core.py
a2rock/data/: collate_batch.py
a2rock/engine/tiling/: __init__.py
a2rock/engine/trainer/: cv.py  tune.py
a2rock/experiments/tiling/: __init__.py
a2rock/nn/: autoencoder.py
