[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "A(square) Rock Gene Essentiality Hackathon"
version = "0.0.0"
description = "Gene essentiality hackathon for A(square) Rock team."
authors = ["A(square) Rock Team <oussama.tchita@owkin.com>"]
readme = "README.md"

repository = "https://github.com/otchita-owkin/asquarerock-hackathon"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Intended Audience :: Data Scientists/Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[[tool.poetry.source]]
name = "owkin"
url = "https://pypi.owkin.com/simple/"
secondary = true
default = false

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
alembic = "^1.8.0"
click = "^8.1.3"
ipykernel = "*"
ipython = "*"
joblib = "^1.1.0"
lifelines = "^0.27.0"
loguru = "^0.6.0"
matplotlib = "^3.5.2"
mlflow = "^1.26.1"
numpy = "^1.22.4"
openpyxl = "^3.0.10"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
seaborn = "^0.11.2"
torch = "^1.11.0"
tqdm = "^4.64.0"
umap = "^0.1.1"
urllib3 = "^1.26.9"


[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
black = "^22.6.0"
pre-commit = "^2.19.0"
pylint = "^2.14.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
mypy = "^0.961"
pandas-stubs = "^1.2.0.61"
types-docutils = "^0.18.3"
types-python-dateutil = "^2.8.17"
types-setuptools = "^57.4.17"
types-Jinja2 = "^2.11.9"
types-MarkupSafe = "^1.1.10"
typing_extensions = "^4.2.0"

[tool.black]
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.github
  | \.git
  | \.mypy_cache
  | \.venv
  | \.dvc
)/
'''
